--- a/auth/android/app/build.gradle
+++ b/auth/android/app/build.gradle
@@ -87,13 +87,23 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.auth"
+        applicationId "com.albums"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
         ndk {
             abiFilters "armeabi-v7a", "x86"
+        }
+    }
+    signingConfigs {
+        release {
+          /*  if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {*/
+                storeFile file('my-app-key.keystore')
+                storePassword '8532069832'
+                keyAlias 'my-app-alias'
+                keyPassword '8532069832'
+        /*    }*/
         }
     }
     splits {
@@ -108,6 +118,7 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
         }
     }
     // applicationVariants are e.g. debug, release
