--- a/tech_stack/android/app/build.gradle
+++ b/tech_stack/android/app/build.gradle
@@ -87,7 +87,7 @@ android {
     buildToolsVersion '25.0.0'
 
     defaultConfig {
-        applicationId "com.auth"
+        applicationId "com.tech_stack"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 1
